--- a/Manus.Rmd
+++ b/Manus.Rmd
@@ -10,25 +10,13 @@ output: pdf_document
 
 Introduction 
 ============
-Trauma is a global health problem and the total number of patients with trauma is at least 520 million per year. [@James2020] In 2017 trauma accounted for 13% of total disability adjusted life years lost and 8% of total deaths globally. [@GBD2017DALY] Most deaths from trauma occur shortly after the injury and reducing mortality in patients with severe trauma requires early intervention, often surgical, as by the “golden hour” concept. This is often due to extensive bleeding where surgery is an important part of the hemorrhage control. [@King2019] <!-- Add something here on the need for care in the ICU for trauma patients-->
+Trauma is a global health problem and the total number of patients with trauma is at least 520 million per year [@James2020]. In 2017 trauma accounted for 13% of total disability adjusted life years lost and 8% of total deaths globally with the majority of the burden being on low and middle income countries [@GBD2017DALY;@Mock2012]. Most deaths from trauma occur shortly after the injury and reducing mortality in patients with severe trauma requires early intervention, often surgical, as by the “golden hour” concept. This is often due to extensive bleeding where surgery is an important part of the hemorrhage control [@King2019]. Furthermore, depending on the severity and type of trauma, patients often need intensive care after a traumatic injury in order to maintain adequate physiological functions. <!-- Add something here on the need for care in the ICU for trauma patients-->
 
-Because of the urgency and complexity of trauma care it is important to early assess the trauma severity to guide further management, including the need for care in the ICU. Several trauma severity scores have been developed for this purpose, of which the Revised Trauma Score (RTS) is the most well known.[@Champion1989] <!-- Write about the RTS here instead, max one or two lines more. End by stating that RTS may be too complex because of the calculations involved, especially in low resource settings with high trauma loads--> 
+Because of the urgency and complexity of trauma care it is important to early assess the trauma severity to guide further management, including the need for care in the ICU. Several trauma severity scores have been developed for this purpose, of which the Revised Trauma Score (RTS) is the most well known [@Champion1989]. The RTS includes Glasgow come scale (GCS), systolic blood pressure (SBP) and respiratory rate (RR), and is rated 0-4 points on each parameter. Because of the multiple cutoffs involved for each parameter the RTS can be too complex for routine use, especially in low resource settings with high trauma loads.
 
-<!-- Continue with qSOFA here in this paragraph, maybe by "The quick Sequential Organ Failure Assessment score (qSOFA score) was developed in 2016 and includes the same variables as RTS. It was introduced as a screening tool to be used bedside to identify patients with high-risk of organ dysfunction due to infections, [@David2017;@Shankar2016] but has lately been shown to predict mortality in trauma patients [@Miyamoto2019; @Miyamoto2020]." End by briefly mention its origin, i.e. summarise the next paragraph in maybe one sentence. -->
+The quick Sequential Organ Failure Assessment score (qSOFA score) was developed in 2016 and includes the same variables as RTS but with just one cutoff for each parameter. It was introduced as a screening tool coupled with the already existing Sequential Organ Failure Assessment score (SOFA score). The qSOFA score was meant to be used bedside to identify patients with high-risk of organ dysfunction due to infections [@David2017;@Shankar2016] and the SOFA score to more precisely evaluate the level of organ dysfunction [@Lambden2019]. However the qSOFA score has lately been to be able to predict mortality in trauma patients [@Miyamoto2019; @Miyamoto2020]. 
 
-The Sequential Organ Failure Assessment (SOFA) score was developed in 1994 to grade the level of organ dysfunction in critically ill patients. The SOFA score is based on the reduced function scored 0-4 for each of the respiratory, cardiovascular, neurological, hepatic, coagulation and renal systems. Initially the focus was mainly patients suffering from severe infections and sepsis, but it was early recognized to be applicable in a wide range of critical illnesses. [@Lambden2019] 
-
-<!-- See my comment above, but most of this can probably be removed-->Alongside the last revision of the sepsis definition in 2016 the quick Sequential Organ Failure Assessment score (qSOFA score) was developed. The qSOFA score includes three parameters: Systolic blood pressure (SBP) below 100 mmHg, a respiratory rate (RR) above 22 min and an altered consciousness, measured with a Glasgow Coma Scale (GCS) score below 15. qSOFA was introduced as a screening tool to be used bedside to identify patients with high-risk of organ dysfunction due to infections, [@David2017;@Shankar2016] but has lately been shown to predict mortality in trauma patients [@Miyamoto2019; @Miyamoto2020].
-
-<!-- See my comment above, but most of this can probably be removed-->Another tool to assess the severity of a patient’s condition due to trauma is the Revised Trauma Score (RTS), which include the same parameters as qSOFA - GCS, SBP and RR - but with a score of 0-4 for each parameter instead of a single criteria. The scores can either be presented individually as used in RTS or added together to a total of 0-12 used in the T-RTS. RTS was intended for outcome evaluation and assessment of trauma severity and the T-RTS for triage and finding patients a prehospital or initial setting in most need of specialized trauma care.  However there are some articles raising concerns about the sensitivity of T-RTS depending on the type of injury. [@Giannakopoulos2011;@Alvarez2016]
-
-<!-- Needs to be revised in light of the edits above. Merge with the next paragraph and include the aim.-->vital to have an initial scoring system that is both simple to perform and that does not need laboratory nor other advanced measuring equipment. For this reason, the SOFA score can be said to use too advanced techniques and the T-RTS with its many categories to be too complicated. The choice of using qSOFA is thus because of its promising signs in other studies and because of the possible clinical advantage in its simplicity.  
-
-It should also be noted that the majority of the research done on the topic of trauma and trauma care has been performed in high income countries. It is thus not clear if the results are also applicable in low resource settings, which arguably stand to benefit the most of a scoring system to be able to prioritize the limited resources at hand. Furthermore, most studies report the predictive power of different scoring systems on mortality and it has not yet been sufficiently studied whether an initial qSOFA score can be used to predict admissions to an intensive care unit and thus aid in the direct clinical treatment of trauma patients.
-
-
-## Aim  
-To assess the validity of qSOFA in predicting ICU admission in trauma patients admitted to hospitals in a low resource setting. A secondary aim was to compare the discrimination and calibration between the original qSOFA model and an updated model-based on the same predictors as qSOFA.
+The majority of the research done on the topic of trauma and trauma care has been performed in high income counties and has studied the predictive power on mortality. Since low resource settings are disproportionately affected by trauma and often have limited resources it can be argued that a simple scoring system to help prioritize resources such as ICU beds would of great use. For this we chose qSOFA as it is easy to perform and due to its singular cutoffs is easy to calculate. In this paper out aim was to asses the validity of qSOFA in predicting ICU admission in trauma patients admitted to hospitals in a low resource setting and to investigate whether the qSOFA model could be updated to increase its performance. 
 
 
 Methods
@@ -50,16 +38,10 @@ The outcome of interest was admission to the ICU during hospitalization as recor
 
 ## Predictors
 
-The predictors used in qSOFA were respiratory rate, Glasgow coma scale and systolic blood pressure<!-- This is repetition. Abbreviate here or only use full forms, also in the introduction-->. Data on these predictors were collected on arrival to hospital. In the original qSOFA these predictors were dichotomized using the cutoffs ≥ 22 for respiratory rate, ≤ 15 for the Glasgow coma scale, and ≤ 100 for systolic blood pressure. Using these dichotomized predictors qSOFA can be expressed as either a model, in which the coefficients or odds ratios associated with each predictor are used to estimate patient specific probabilities of the outcome, or a score equal to the sum of the dichotomized predictors ranging from 0 to 3. For this study we used the predictors as dichotomized in the original qSOFA publication [@Shankar2016] but also as continuous variables to identify new optimal cutoffs and associated coefficients, see Statistical analysis methods below.
+The predictors used in qSOFA were RR, GCS and SBP. Data on these predictors were collected on arrival to hospital. In the original qSOFA these predictors were dichotomized using the cutoffs ≥ 22 for respiratory rate, ≤ 15 for the Glasgow coma scale, and ≤ 100 for systolic blood pressure. Using these dichotomized predictors qSOFA can be expressed as either a model, in which the coefficients or odds ratios associated with each predictor are used to estimate patient specific probabilities of the outcome, or a score equal to the sum of the dichotomized predictors ranging from 0 to 3. For this study we used the predictors as dichotomized in the original qSOFA publication [@Shankar2016] but also as continuous variables to identify new optimal cutoffs and associated coefficients, see Statistical analysis methods below.
 
 ## Sample size 
-<!-- This section is supposed to be about the sample size calculation (that we didn't do) rather than the final sample size. I suggest you move all of this to the first paragraph in Results. Here you can write that we included all eligible patients from the TITCO cohort.-->
-The TITCO cohort included `r results$n.cohort` patients (Figure 1). We excluded `r results$n.younger.than.18` patients because they were under the age of 18  and `r  results$n.incl2 ` patients because they died between arrival and admission. Patients with on arrival externally controlled breathing, such as intubation or surgical airway, were also excluded accounting for `r esults$n.intub.or.saw.before.arrival` patients. We further excluded  `r results$n.NA_TOT` patients due to missing data in either admission to the ICU (`r results$n.NA_ICU`), systolic blood pressure  (`r results$n.NA_SBP`), respiratory rate (`r results$n.NA_RR`), or GCS (`r results$n.NA_GCS`). The final sample included `r results$n.complete` patients. 
-
-```{r figure1, fig.align = 'center', out.width = "100%", fig.cap = "Flowchart showing the exclussion criteria andthe number of study participants. /n *Externally controlled breathing includes intubation orsurgical airway before arrival to a participating hospital", echo = FALSE}
-knitr::include_graphics("figure1.svg")
-```
-
+We included all eligible patients from the TITCO cohort
 
 ## Missing data
 
@@ -68,21 +50,26 @@ A complete case analysis was conducted.
 
 ## Statistical analysis methods
 
-We used R for all statistical analyses [@Rstudio]<!-- Decide if you want the citation before or after the period, but keep the style consistens-->. We described the sample characteristics using counts and percentages for qualitative variables and mean and standard deviations (SD) for quantitative variables. We use model to denote the combination of predictor values and coefficients that can be used to estimate patient specific outcome probabilities and score to denote the sum of dichotomized predictor values.
+We used R for all statistical analyses [@Rstudio]. We described the sample characteristics using counts and percentages for qualitative variables and mean and standard deviations (SD) for quantitative variables. We use model to denote the combination of predictor values and coefficients that can be used to estimate patient specific outcome probabilities and score to denote the sum of dichotomized predictor values.
 
 The study sample was randomly split into three parts called training sample, validation sample, and test samples with 60%, 20%, and 20% of the observations in each sample respectively. To update qSOFA we first used the training sample to identify new optimal cutoffs for each predictor. To identify optimal cutoffs we calculated the Youden index for all possible cutoffs for each predictor. We then defined the optimal cutoff for each predictor as the cutoff that maximized the Youden index. We then used the validation sample to estimate coefficients associated with the new optimal cutoffs with logistic regression. 
 
 We used the test sample to assess and compare the performances of the original and the updated qSOFA models. We assessed performance in terms of discrimination, as the area under the receiver operating characteristics curve (AUC), and calibration, as the integrated calibration index (ICI). For AUC, an acceptable performance is above 0.7 where higher AUCs correspond to better discrimination and values below 0.7 show poor discrimination. Regarding ICI no standard for performance exists, but a lower index close to 0 corresponds to a better calibration. We compared the performances of the original and updated qSOFA models by calculating the absolute differences in performance estimates.
 
-We also compared the original and updated qSOFA scores. In the original qSOFA publication (20)<!-- Is this supposed to be a reference?-->, odds ratios were only presented for the individual dichotomized predictors. We used those odds ratios, together with the presented mortality for patients with a score of 0, to construct a model and calculate the odds ratios for each level of the score (i.e. 0, 1, 2 and 3) by averaging the predicted probabilities of the outcome in all patients in the validation sample with the same score. We calculated the odds ratios associated with each level of the updated score using the same method and tabulated the odds ratios of the original and updated scores side by side.
+We also compared the original and updated qSOFA scores. In the original qSOFA publication [@Seymour2016], odds ratios were only presented for the individual dichotomized predictors. We used those odds ratios, together with the presented mortality for patients with a score of 0, to construct a model and calculate the odds ratios for each level of the score (i.e. 0, 1, 2 and 3) by averaging the predicted probabilities of the outcome in all patients in the validation sample with the same score. We calculated the odds ratios associated with each level of the updated score using the same method and tabulated the odds ratios of the original and updated scores side by side.
 
 To estimate 95% confidence intervals (CIs) associated with new optimal cutoffs, performance estimates, differences in performance estimates, and odds ratios for score levels we used an empirical bootstrap procedure with 1000 iterations. During each iteration, the entire study process – from splitting of the sample into training, validation, and test samples to the calculation of score level odds ratios – was repeated in a bootstrap sample of the same size as the original sample drawn with replacement.
  
 
 Results
 ========
+The TITCO cohort included `r results$n.cohort` patients (Figure 1). We excluded `r results$n.younger.than.18` patients because they were under the age of 18  and `r  results$n.incl2 ` patients because they died between arrival and admission. Patients with on arrival externally controlled breathing, such as intubation or surgical airway, were also excluded accounting for `r esults$n.intub.or.saw.before.arrival` patients. We further excluded  `r results$n.NA_TOT` patients due to missing data in either admission to the ICU (`r results$n.NA_ICU`), systolic blood pressure  (`r results$n.NA_SBP`), respiratory rate (`r results$n.NA_RR`), or GCS (`r results$n.NA_GCS`). The final sample included `r results$n.complete` patients. 
 
-The total number of participants used in this study were `r results$n.complete`. The mean age was `r round(tabOne$ContTable$Overall["Age","mean"],2)` with predominantly `r tolower(most.common.sex)` participants (`r p.sex`%). The most common type of injury was `r tolower(most.common.mechanism)`s with `r p.mechanism`% followed by `r tolower(second.most.common.mechanism)`s and `r tolower(third.most.common.mechanism)` accounting for `r p.mechanism.second` % and `r p.mechanism.third` % respectively. `r  p.transported`% of patients were transported to a participating hospital from another health care facility. Overall  `r p.ICU`% of patients had to be treated in the ICU. The data is presented in \@ref(tab:table1) with corresponding standard deviations and percentages. 
+```{r figure1, fig.align = 'center', out.width = "100%", fig.cap = "Flowchart showing the exclussion criteria andthe number of study participants. /n *Externally controlled breathing includes intubation orsurgical airway before arrival to a participating hospital", echo = FALSE}
+knitr::include_graphics("figure1.svg")
+```
+
+The mean age was `r round(tabOne$ContTable$Overall["Age","mean"],2)` with predominantly `r tolower(most.common.sex)` participants (`r p.sex`%). The most common type of injury was `r tolower(most.common.mechanism)`s with `r p.mechanism`% followed by `r tolower(second.most.common.mechanism)`s and `r tolower(third.most.common.mechanism)` accounting for `r p.mechanism.second` % and `r p.mechanism.third` % respectively. `r  p.transported`% of patients were transported to a participating hospital from another health care facility. Overall  `r p.ICU`% of patients had to be treated in the ICU. The data is presented in \@ref(tab:table1) with corresponding standard deviations and percentages. 
 
 
 ```{r table1, echo = FALSE}
@@ -104,7 +91,7 @@ Abbreviations: OR-Odds ratio, CI-Confidence interval, SBP-Systolic blood pressur
 * OR for the original model refers to mortality.
 ** OR for the updated model refers to ICU admissions.
 
-The predicted probability of ICU admission and corresponding OR for each score level given the OR from Table 2 is presented in Table 3 and 4 for the original and the updated models respectively. The presented ORs are weighted according to the distribution and proportions of the individual dichotomized parameters, SBP, RR and GCS either above or below the corresponding original or updated cutoffs, as present the study population<!-- I don't fully understand this sentence. Can you try to revise?-->. For the original model, the probability ranges from `r round(CIs$est.prob.sum.org.none,2)*100 `% to `r round(CIs$est.prob.sum.org.three,2)*100 `% and for the updated model, the predicted probability ranges from `r round(CIs$est.prob.sum.new.none,2)*100 `% to `r round(CIs$est.prob.sum.new.three,2)*100 `% for a score of 0-3.  
+The predicted probability of ICU admission and corresponding OR for each score level given the OR from Table 2 is presented in Table 3 and 4 for the original and the updated models respectively. The presented ORs are weighted according to the distribution of the individual parameter scores for each total score as present in the study population. For the original model, the probability ranges from `r round(CIs$est.prob.sum.org.none,2)*100 `% to `r round(CIs$est.prob.sum.org.three,2)*100 `% and for the updated model, the predicted probability ranges from `r round(CIs$est.prob.sum.new.none,2)*100 `% to `r round(CIs$est.prob.sum.new.three,2)*100 `% for a score of 0-3.  
 
 | Original score | Estimated probability of ICU admission(95%CI) | Odds ratio(95% CI)          |
 |-----------------|-----------------------------------------------|-----------------------------|
@@ -122,7 +109,7 @@ Table: Predicted probabilities of intensive care unit (ICU) admission given an o
 | 3               | `r CIs$est.prob.sum.new.three `               |`r CIs$est.OR.sum.new.three ` |
 Table: Predicted probabilities of intensive care unit (ICU) admission given an updated qSOFA score of 0-3 and corresponding odds ratios using 0 as reference.
 
-Figure 2?<!-- Why the questionmark?--> shows a comparison between the estimated and observed probabilities for the new and updated model and table 5 compares the performance in terms of Integrated calibration index (ICI) and Area under the curve (AUC) for the receiver operating characteristics for the original and updated model.
+Figures 2 and 3 shows comparisons between the estimated and observed probabilities for the new and updated model and table 5 compares the performance in terms of Integrated calibration index (ICI) and Area under the curve (AUC) for the receiver operating characteristics for the original and updated model.
 
 Figures: 
 ```{r ICIorg, echo = FALSE}
@@ -147,7 +134,7 @@ Discussion
 ========
 
 <!-- aim and how it went, --->
-The aim of this project was to assess the validity of the original qSOFA in predicting ICU admission in trauma patients admitted to hospitals in a low resource setting. We found that in the context of urban Indian hospitals the original qSOFA score, with its original cutoffs and coefficients, did not accurately predict ICU admission. The original model underestimated the probability of ICU admission and a max score of 3 did not result in an increased rate of ICU admission compared to a score of 0. When updating the model by adjusting the cutoffs and coefficients the new model performs significantly better both in terms of ICI and AUC. The AUC for the updated model remained below 0.7 and both models discriminated ICU admission poorly. The updated model performed only slightly better. The low ICI for the updated model and score indicates good calibration which cannot be said about the original model and score.<!-- I recommend that you always report the results of the original model/score before the updated model/score-->  
+The aim of this project was to assess the validity of the original qSOFA in predicting ICU admission in trauma patients admitted to hospitals in a low resource setting. We found that in the context of urban Indian hospitals the original qSOFA score, with its original cutoffs and coefficients, did not accurately predict ICU admission. The original model underestimated the probability of ICU admission and a max score of 3 did not result in an increased rate of ICU admission compared to a score of 0. When updating the model by adjusting the cutoffs and coefficients the new model performs significantly better both in terms of ICI and AUC. The AUC for the original and updated model remained below 0.7 and both models discriminated ICU admission poorly. The updated model performed only slightly better. The ICI was high for the original and lower for the updated model and score wich indicates improved calibration when updating both the model and the score.
 
 <!-- usage and limitation -->
 
@@ -155,12 +142,16 @@ While developing the original qSOFA score as a screening tool for patients with 
 
 In contrast, with our updated qSOFA for predicting ICU admission in trauma patients a low score of 0-1 corresponded to a probability for ICU admission of `r boot.cis$est.prob.sum.new.none[["pe"]]`-`r boot.cis$est.prob.sum.new.one[["pe"]]`% and a high score of 2-3 correspond to a mortality of `r boot.cis$est.prob.sum.new.two[["pe"]]`-`r boot.cis$est.prob.sum.new.three[["pe"]]` %. This shows that regardless of the score the patients still have a relatively high risk for ICU admission. Although a higher score is shown to correlate with a higher risk of ICU admission it is not clear what clinical relevance this score would have in the process of deciding the adequate level of care for patients with trauma. 
 
-Although no other studies have been done correlating qSOFA to ICU admission in low resource settings<!-- This sentence appears incomplete, try to revise-->. Studies have explored the association between qSOFA and mortality in high resource settings, both regarding patients with risk for sepsis [@Seymour2016;] and trauma patients [@Miyamoto2020;@Sepsis3]. These studies show that there is a clear association between qSOFA and mortality. Comparing these results to ours the ORs are higher, and the AUC shows a slightly better discrimination for mortality than ICU admission. 
+Although no other studies have been done correlating qSOFA to ICU admission in low resource settings studies have explored the association between qSOFA and mortality in high resource settings, both regarding patients with risk for sepsis [@Seymour2016] and trauma patients [@Miyamoto2020;@Sepsis3]. These studies show that there is a clear association between qSOFA and mortality. Comparing these results to ours the ORs are higher, and the AUC shows a slightly better discrimination for mortality than ICU admission. 
 
 The results also showed that out of the three parameters, the association between respiratory rate and a higher risk of ICU admission was not statistically significant. In contrast the associations for SBP and GCS were statistically significant. This can be partially explained by that a new cutoff was calculated for each bootstrap resulting in different cutoffs being used while evaluating the model widening the confidence intervals. It also shows that in some bootstraps, a higher RR above the cutoff was associated with a lower risk for ICU admission, suggesting that the connection between RR and ICU admission is not strictly positive, as assumed in the construction of the qSOFA model. One possible explanation would be that both a high and a low RR is associated with higher risk of ICU admission, however this was not explored in this study. More research is needed to further explore the connection between RR and ICU admission before the original, or an updated qSOFA score as presented in this study, can be used in clinical decision making in this context.   
 
-It can be argued that both ICU admission and mortality results from a more severe patient condition, and thus should be correlated. However, in this cohort mortality was high also in patients who were not admitted to the ICU, indicating that the association between trauma severity and ICU admission may be less straightforward in this setting compared with many high resource settings. This could be partly because these patients were so severely injured that they either died before they could be transferred to the ICU or it was decided that intensive care would not be of use for the patients. But it could also be due to a lack of ICU beds in the participating hospitals such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context, the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan (21)<!--Lägg in källa i bib -->. To be able to explore this question more thoroughly further research is needed.
+It can be argued that both ICU admission and mortality results from a more severe patient condition, and thus should be correlated. However, in this cohort mortality was high also in patients who were not admitted to the ICU, indicating that the association between trauma severity and ICU admission may be less straightforward in this setting compared with many high resource settings. This could be partly because these patients were so severely injured that they either died before they could be transferred to the ICU or it was decided that intensive care would not be of use for the patients. But it could also be due to a lack of ICU beds in the participating hospitals such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context, the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan [@phua2020]. To be able to explore this question more thoroughly further research is needed.
 
+<!-- Clinical applications and future research -->
+The results from this study are not significant enough to merit direct clinical use of the original nor the updated model in the context of predicting ICU admission. This project should rather be considered as a basis for future research aimed to construct a more exact model to predict ICU admission in trauma patients. One way for future research to investigate the usage of qSOFA in predicting ICU admission would be to look at ICU admission, qSOFA score and mortality combined in order to better predict outcome. However, if the goal is to have a model to predict ICU admission the author would suggest developing an entirely new model using more predictors than used in this paper. The one-time values of our parameters are thought of to be too simplistic when assessing the need for intensive care. For future studies, a more diverse set of parameters as well as information about their dynamics in time should be considered for constructing a more precise model. 
+
+Furthermore, more research needs to be performed where trauma patients arrive at a wider range of healthcare facilities. Both in terms of urbanization as well as not only including specialized tertiary care trauma hospitals. This in order to better be able to follow the patients care from first contact until they are transferred to and treated at a specialized trauma hospital, and also to be able to draw conclusions that apply in a wider range of circumstances. A study like this will be difficult to design but would yield the most information regarding the care of trauma patients in low resource settings. 
 
 <!-- Strengths and limitations-->
 
@@ -171,21 +162,6 @@ Secondly it should be noted that 61 percent of the patients where for an unspeci
 Lastly the TITCO database had a significant amount of missing data, about 45% of the 12 thousand participants fulfilling the inclusion criteria were excluded due to missing data. Since we do not know the distribution, the cause of this missing data nor whether it can be assumed to have any particular distribution this further increases the uncertainty. The largest contributor of missing data was respiratory rate and since this was manually calculated by hospital staff it is possible that it was not prioritized for patients with the most severe injuries where other interventions where of greater importance and thus excluding them from this study. It is unknown if this had any effect on this study and for more certain result more research is needed.
 
 
-<!-- Try to combine clinical applications and future research into one or two paragraphs that come before limitations.
-
-<!-- Clinical applications -->
-The results from this study are not significant enough to merit direct clinical use of the original nor the updated model in the context of predicting ICU admission as discussed above. This project should rather be considered as a basis for future research aimed to construct a more exact model to predict ICU admission in trauma patients, see future studies below.
-
-
-<!-- future research -->
-A way for future research to investigate the usage of qSOFA in ICU admission would be to look at ICU admission, qSOFA score and mortality combined. This in order to investigate whether patients, depending on their qSOFA score, who were admitted to the ICU had a lower morality compared to patients with the same qSOFA score not admitted to the ICU. The aim of this would be to decide which patients would be the most helped by intensive care to better allocate the resources on hand. 
-
-However, if the goal is to have a model to predict ICU admission the author would suggest developing an entirely new model using more predictors than used in this paper. The one-time values of our parameters are thought of to be too simplistic when assessing the need for intensive care. For future studies, a more diverse set of parameters as well as information about their dynamics in time should be considered for constructing a more precise model. 
-
-Furthermore, more research needs to be performed where trauma patients arrive at a wider range of healthcare facilities. Both in terms of urbanization as well as not only including specialized tertiary care trauma hospitals. This in order to better be able to follow the patients care, not only from the time they are transferred to a specialized trauma hospital, and also to be able to draw conclusions that apply in a wider range of circumstances. A study like this will be difficult to design but would yield the most information regarding the care of trauma patients in low resource settings. 
- 
-
-
 ##Conclusion
-An updated qSOFA score can be used to estimate the overall risk for ICU admission in trauma patients in urban Indian hospitals. Although the updated model had a good calibration on group level, the specificity and sensitivity<!-- We don't use these measures explicitly and haven't mentioned them earlier, so I suggest talking about discrimination instead--> were shown to be too low to merit any use in clinical decision making for the individual patient and thus more research is needed. 
+An updated qSOFA score can be used to estimate the overall risk for ICU admission in trauma patients in urban Indian hospitals. Although the updated model had a good calibration on group level, the dicrimination was shown to be too low to merit any use in clinical decision making for the individual patient and thus more research is needed. 
 
