--- a/bibliography.bib
+++ b/bibliography.bib
@@ -234,6 +234,21 @@ volume = {23},
 year = {2019}
 }
 
+@article{phua2020,
+abstract = {},
+author = {Phua J, Faruq MO, Kulkarni AP, Redjeki IS, Detleuxay K, Mendsaikhan N, et al.},
+doi = {},
+file = {},
+issn = {},
+journal = {Critical Care Medicine},
+keywords = {},
+number = {5},
+pages = {654-662},
+title = {{Critical Care Bed Capacity in Asian Countries and Regions}},
+volume = {48},
+year = {2020}
+}
+
 @article{David2017,
 abstract = {},
 author = {David, S., & Brunkhorst, F.},
